Finalização das atividades de revisão, falta testar

--- a/Atv1-7/Atv1-7/Atv1-7.csproj
+++ b/Atv1-7/Atv1-7/Atv1-7.csproj
@@ -48,6 +48,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Q2.cs" />
     <Compile Include="Q3.cs" />
+    <Compile Include="Q4.cs" />
+    <Compile Include="Q5.cs" />
+    <Compile Include="Q6.cs" />
+    <Compile Include="Q7.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
